--- a/javascript DOM/Lecture3/index.html
+++ b/javascript DOM/Lecture3/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Wish List</title>
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="../assets/style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Ranchers&family=Roboto:wght@300;400&display=swap" rel="stylesheet">	
