--- a/Advance javascript/index.html
+++ b/Advance javascript/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,user-scalable=no,width=device-width">
-    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <link href="//fonts.googleapis.com/css?family=Roboto|Open+Sans:200,300,400,700,800,900&amp;subset=latin" as="font" />
 </head>
 <body>
@@ -18,6 +18,6 @@
         </h1>
         <img src="../assets/img/jack-carter-ic-p_bohKCo-unsplash.jpg" class="img" alt='jack-carter'/>
     </section>
-    <script src="./lecture2.js"></script>
+    <script src="./Lecture 3/lecture3.js"></script>
 </body>
 </html>
